<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:paddingStart="18dp"
    android:paddingEnd="8dp"
    android:paddingTop="10dp"
    android:paddingBottom="14dp"
    android:background="@drawable/corners_clothes"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    android:elevation="12dp">

    <TextView
        android:id="@+id/fromWhom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/fromWhom"
        android:textColor="@color/app_grey"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/appealedPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/fromWhom"
        android:textColor="@color/app_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/toWhom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_toRightOf="@+id/fromWhom"
        android:layout_marginStart="70dp"
        android:text="@string/whomto"
        android:textColor="@color/app_grey"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/complaintPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toWhom"
        android:layout_marginStart="70dp"
        android:layout_toRightOf="@+id/fromWhom"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/app_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/reasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appealedPerson"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reason"
        android:textColor="@color/app_grey"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/reasonText"
        android:textColor="@color/app_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reason"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reason"
        android:textColor="@color/app_grey"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/descriptionText"
        android:textColor="@color/app_color"
        android:textSize="14sp" />

</RelativeLayout>